tests/neg/inline-trait-body-class-params.scala
inline trait A:
  class Inner(val x: Int) // error

class B extends A:
  def f = Inner(17).x